# browsers

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  Taskfile.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  pypi.yml  python.yml  testpypi.yml
browsers/: __init__.py  common.py  linux.py  osx.py  windows.py
tests/: test_detect.py  test_launch.py
