[tool.poetry]
name = "pybrowsers"
version = "0.5.1"
repository = "https://github.com/roniemartinez/browsers"
description = "Python library for detecting and launching browsers"
authors = ["Ronie Martinez <ronmarti18@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
]
packages = [
    { include = "browsers" },
]

[tool.poetry.urls]
"Donate" = "https://github.com/sponsors/roniemartinez"


[tool.poetry.dependencies]
python = "^3.7"
pyxdg = { version = ">=0.27,<0.29", markers = "sys_platform == 'linux'" }
pywin32 = { version = ">=303,<305", markers = "sys_platform == 'win32'" }

[tool.poetry.dev-dependencies]
autoflake = "^1.3.1"
black = "^22.6"
isort = "^5.10.1"
mypy = "^0.961"
pyproject-flake8 = "^0.0.1a3"
pytest = "^7.1.2"
pytest-clarity = "^1.0.1"
pytest-cov = "^3.0.0"

[tool.isort]
line_length = 120
multi_line_output = 3
force_grid_wrap = 0
use_parentheses = true
include_trailing_comma = true
ensure_newline_before_comments = true
atomic = true

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = """
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/setup.py
"""

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "pkg_resources",
]
ignore_missing_imports = true

[tool.flake8]
max-line-length = 120
extend-ignore = "E203"
extend-exclude = """
setup.py,
"""

[tool.pytest.ini_options]
addopts = """\
    --cov=browsers \
    --cov-report=term-missing \
    --cov-report=xml \
    --cov-report=html \
    -vv \
    -x \
    -s \
"""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
