[project]
name = "pybrowsers"
version = "1.4.0"
description = "Python library for detecting and launching browsers"
authors = [
    { name = "Ronie Martinez", email = "ronmarti18@gmail.com" }
]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
]
requires-python = ">=3.10"
dependencies = []

[project.urls]
repository = "https://github.com/roniemartinez/browsers"
"Donate" = "https://github.com/sponsors/roniemartinez"

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "pytest-clarity>=1.0.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.10",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.isort]
force-single-line = false
known-first-party = ["browsers"]

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = """\
    --cov=browsers \
    --cov-report=term-missing \
    --cov-report=xml \
    --cov-report=html \
    --doctest-modules \
    -vv \
    -x \
    -s \
"""

[tool.uv.build-backend]
module-name = "browsers"
module-root = ""

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"
